# VeriFlair

./: .env  Cargo.toml  VeriFlair - Project Documentation.md  dfx.json  package-lock.json
.dfx/local/: canister_ids.json  network-id
.dfx/local/canisters/veriflair_backend/: constructor.did  index.js  veriflair_backend.wasm
.dfx/local/canisters/veriflair_frontend/: index.js
.dfx/local/canisters/veriflair_nft/: index.js  veriflair_nft.wasm
backend/: Cargo.toml  DEPLOY_INSTRUCTIONS.md  README.md  deploy-azure.sh  dfx.json  fix-auth.sh  package-lock.json  package.json  reinstall-backend.sh  test-azure.sh  test-badges.sh  troubleshoot.sh  update-backend.sh
backend/assets/: internet_identity_dev.wasm
backend/candid/: backend.did
backend/src/auth/: Cargo.toml  auth.did
backend/src/auth/src/: lib.rs
backend/src/backend/: Cargo.toml  backend.did
backend/src/backend/src/: github.rs  lib.rs  llm.rs  models.rs  utils.rs
backend/src/nft/: Cargo.tml  nft.did
backend/src/nft/src/: lib.rs
backend/src/veriflair_backend/: Cargo.toml
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json
frontend/note/: BadgeCard no glitter.txt  BadgeCard with glitter.txt
frontend/src/: App.js  App.jsx  index.css  vite-env.d.ts
frontend/src/components/: AuthTest.jsx  AuthTest.tsx  BottomSection.jsx  GitHubCallback.jsx  LowerSection.jsx  MainLayout.jsx  ProtectedRoute.jsx  TopSection.jsx  UpperSection.jsx
frontend/src/components/LandingPage/: BottomSection.jsx  LowerSection.jsx  TopSection.jsx  UpperSection.jsx
frontend/src/components/LeaderBoardPage/: BadgeCard.jsx  Header.jsx  Leaderboard.jsx  LeaderboardItem.jsx
frontend/src/declarations/: auth.js  auth.ts
frontend/src/hooks/: useAuth.jsx
frontend/src/pages/: LandingPage.jsx  LeaderboardPage.jsx  ProfilePage.jsx  UserDetailPage.jsx
frontend/src/services/: authService.js  authService.ts  canisterService.js
frontend/src/styles/: ShootingStars.jsx
frontend/src/types/: auth.ts
nft/: Cargo.toml
(+4 files in other folders)
