[workspace]
members = [
    # "src/auth",
    "src/backend",
    # "src/nft"
]
resolver = "2"

[workspace.dependencies]
candid = "0.10"
ic-cdk = "0.12"
ic-cdk-timers = "0.6"
ic-stable-structures = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }