[workspace]
members = [
    "src/auth",
    "src/backend",
    "src/nft"
]
resolver = "2"

[workspace.dependencies]
candid = "0.10"
ic-cdk = "0.18.5"
ic-cdk-macros = "0.18.5"
ic-cdk-timers = "0.12.2"
ic-stable-structures = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.12.20", features = ["json"] }