[package]
name = "auth"
version = "0.1.0"
edition = "2021"

[dependencies]
candid.workspace = true
ic-cdk.workspace = true
ic-cdk-macros.workspace = true
ic-cdk-timers.workspace = true
ic-stable-structures.workspace = true
serde.workspace = true
serde_json.workspace = true

[lib]
crate-type = ["cdylib"]