[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
candid.workspace = true
ic-cdk.workspace = true
ic-cdk-timers.workspace = true
ic-stable-structures.workspace = true
serde.workspace = true
serde_json.workspace = true
reqwest.workspace = true
base64 = "0.22.1"
sha2 = "0.10"

[lib]
crate-type = ["cdylib"]
